@@ -5,6 +5,8 @@
 
 #define hardness 250
 #define ROOM_MIN 5
+#define ROOM 0
+#define HALL -1
 
 typedef struct dungeon_t dungeon_t;
 
@@ -15,6 +17,8 @@ void init_rooms(dungeon_t *d);
 int rooms_valid(dungeon_t *d);
   
 void insert_rooms(dungeon_t *d);
+
+void insert_halls(dungeon_t *d);
   
 void print_grid(dungeon_t *d);
 
